# poll-app

./: .coverage  .env  .gitignore  Procfile  README.md  ROADMAP.md  app.py  cert.pem  env  gunicorn.conf.py  key.pem  launch.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py
app/: __init__.py  models.py  routes.py
app/instance/: app.db
app/templates/: admin-dashboard.html  admin.html  home.html
backup/: data.sql  roles.sql  schema.sql
instance/: app.db
migrations/versions/: e7ef2ac7be7c_add_response_table.py  ee92938d9bed_initial_migration.py
polll/: __init__.py  auth.py  comment.py  db.py  home.py  poll.py  responses.py  tailwind.config.js  utils.py
polll/queries/: feed_hot.sql  feed_new.sql  feed_top.sql  history.sql  mypolls.sql  poll.sql  poll_responses.sql
polll/static/: input.css  output.css  tailwind.config.js
polll/static/scripts/: graphs.js  notification.js  ui.js
polll/static/styles/: slider.css  spinner.css  star-selector.css  transitions.css
polll/templates/: 404.html  base.html  changelog.html  index.html  macros.jinja  navbar.html  settings.html
polll/templates/admin/: admin.html  boards-list.html  menu.html  (+5 more)
src/: app.py
src/instance/: app.db  polll.sqlite  test.db
src/polll/: __init__.py  admin.py  auth.py  authentication.py  comment.py  db.py  decorators.py  handlers.py  home.py  models.py  poll.py  responses.py  result_handlers.py  results.py  routes.py  schema.sql  utils.py
supabase/: config.toml
templates/: admin.html  home.html  index.html
tests/: 1  app_test.py  conftest.py
(+164 files in other folders)
